@@ -20,8 +20,9 @@ import static org.junit.Assert.assertEquals;
 public class StepDefinitions extends Utils {
 
     Pokemon pokemonObj = new Pokemon();
+    String response;
 
-    @Given("{string} endpoint with id {string}")
+    @When("User sends  a GET request at {string} endpoint with id {string}")
     public void return_object_with_id(String pokemon, String resource) throws IOException {
 
         pokemonObj = given().spec(requestSpec(APIPaths.valueOf(pokemon).getPath(), resource))
@@ -29,34 +30,40 @@ public class StepDefinitions extends Utils {
 
     }
 
-    @Then("expect response object name to be {string}")
+    @Then("Expect response object name to be {string}")
     public void expect_object_name_to_be(String name) {
-        System.out.println(pokemonObj.getName());
+
         assertEquals(pokemonObj.getName(), name);
+
     }
 
-    @Given("step one")
-    public void step_one() {
+    @Given("Request body set to {string} {string} {string} {string}")
+    public void set_requestBody(String name,  String baseStat,  String statName, String url) {
 
-        pokemonObj.setName("abra");
-        pokemonObj.setStats("900","attack","urlTxt");
+        pokemonObj.setName(name);
+        pokemonObj.setStats(baseStat, statName, url);
+    }
 
-        String response = given().baseUri("https://gen-endpoint.com/api/echo").
-                body(pokemonObj).when()
-                .post().then().extract().response().asString();
-        System.out.println(response);
-        List<Map<String, Object>> object = new JsonPath(response).getList("receivedBody.stats");
+    @When("User sends a POST with request body")
+    public void user_send_postRequest() {
+
+            response = given().baseUri("https://gen-endpoint.com/api/echo").
+                    body(pokemonObj).when()
+                    .post().then().extract().response().asString();
+
+    }
+
+    @Then("Expect response object to match {string} {string} {string} {string}")
+    public void check_response(String name,  String baseStat,  String statName, String url) {
+
+        List<Map<String, Object>> stat = new JsonPath(response).getList("receivedBody.stats.stat");
+        List<Map<String, Object>> stats = new JsonPath(response).getList("receivedBody.stats");
         String objName = new JsonPath(response).getString("receivedBody.name");
 
-        System.out.println(objName);
-        System.out.println(object.get(0).get("base_stat"));
+        assertEquals(stat.getFirst().get("url"),url);
+        assertEquals(stat.getFirst().get("name"),statName);
+        assertEquals(stats.getFirst().get("base_stat"), baseStat);
+        assertEquals(objName, name);
 
-
-
-    }
-
-    @Then("step two")
-    public void step_two() {
-        System.out.println();
     }
 }
